--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,7 +61,7 @@ body {
 
   --input: rgba(192, 192, 192, .3);
   
-  --dim: rgba(0, 0, 0, .2);
+  --dim: rgba(0, 0, 0, .4);
   --shadow: .1rem .1rem .5rem rgba(0, 0, 0, .15);
   --shadow-level-1: .2rem .2rem 5rem rgba(0, 0, 0, .2);
   --drop-shadow: drop-shadow(rgba(90, 90, 90, 0.1) 0px 2px 5px);
@@ -108,7 +108,7 @@ body.dark {
   --level-4-opacity: #3a3a3a88;
   --level-5-opacity: #40404088;
   
-  --dim: rgba(0, 0, 0, .2);
+  --dim: rgba(0, 0, 0, .4);
   --shadow: none;
   --shadow-level-1: none;
   --hover: #a8aaad66;
@@ -426,7 +426,7 @@ label, summary{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .2);
+  background-color: var(--dim);
   z-index: 100;
 }
 
