--- a/styles/common/input.module.css
+++ b/styles/common/input.module.css
@@ -89,9 +89,11 @@
   :focus,
   .active
 )~.placeholder > *,
-.input:is( :valid,
+.input:is(
+  :valid,
   :focus,
-  .active)~.placeholder:not(:has(*)) {
+  .active
+)~.placeholder:not(:has(*)) {
   padding: 0 .5rem;
   background-color: var(--level-1);
 }
@@ -100,7 +102,7 @@
   :valid,
   :focus,
   .active
-) ~ .placeholder {
+)~.placeholder {
   transform: translate(.5rem, -1.8rem);
 }
 
@@ -134,14 +136,6 @@
 
 .input_wrap .input[disabled]~.placeholder {
   opacity: .3;
-}
-
-.input_wrap:active {
-  transform: scale(.95);
-}
-
-.input_wrap.number:active {
-  transform: scale(.8);
 }
 
 .editor {
