--- a/styles/common/dropdown-menu.module.css
+++ b/styles/common/dropdown-menu.module.css
@@ -17,9 +17,12 @@
 
 .title {
   position: relative;
-  padding-right: 2rem;
   font-weight: bold;
   cursor: pointer;
+}
+
+.title.mark {
+  padding-right: 2rem;
 }
 
 .title.mark::after {
