--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -1,132 +1,143 @@
 .comment_wrap {
-    margin: 2rem 0 5rem;
-    padding: 30px 5px;
-    background-color: var(--level-2);
-    border-radius: 1rem;
-    box-shadow: var(--shadow);
+  margin: 2rem 0 5rem;
+  padding: 30px 5px;
+  background-color: var(--level-2);
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
 }
 
 .item_wrap {
-    display: flex;
-    border-radius: 1rem;
-    cursor: pointer;
-    transition: .25s;
+  display: flex;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: .25s;
 }
 
 .item_wrap:hover {
-    background-color: var(--hover);
+  background-color: var(--hover);
 }
 
 .item {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .item div:nth-child(2) {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 .deleted {
-    color: var(--text-level-2);
+  color: var(--text-level-2);
 }
 
 .view_child {
-    padding: 1rem;
-    border-radius: 1rem;
-    color: var(--text-level-2);
-    background-color: var(--level-4);
-    cursor: pointer;
-    transition: .25s;
+  padding: 1rem;
+  border-radius: 1rem;
+  color: var(--text-level-2);
+  background-color: var(--level-4);
+  cursor: pointer;
+  transition: .25s;
 }
 
 .view_child:hover {
-    background-color: var(--hover);
+  background-color: var(--hover);
 }
 
 .child {
-    min-width: 50rem;
-    margin-left: 5rem;
-    border-left: .1rem solid var(--gray);
+  min-width: 50rem;
+  margin-left: 5rem;
+  border-left: .1rem solid var(--gray);
 }
 
 .user_profile {
-    height: 3rem;
+  height: 3rem;
 }
 
 .user_profile img {
-    width: 3rem !important;
-    height: 3rem !important;
+  width: 3rem !important;
+  height: 3rem !important;
 }
 
 .write_bar {
-    position: fixed;
-    min-width: 50rem;
-    bottom: 0;
-    left: 50%;
-    padding: .5rem;
-    width: auto;
-    animation: show-write-bar .25s forwards;
+  position: fixed;
+  min-width: 50rem;
+  bottom: 0;
+  left: 50%;
+  padding: .5rem;
+  width: auto;
+  animation: show-write-bar .25s forwards;
 }
 
 .write_bar_menu {
-    display: flex;
-    background-color: var(--level-2);
-    border-radius: .75rem;
+  display: flex;
+  background-color: var(--level-2);
+  border-radius: .75rem;
 }
 
 .write_bar_menu button {
-    padding: 1.5rem 2rem;
+  padding: 1.5rem 2rem;
 }
 
 .write_bar_menu .emoticon_button {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .write_bar_menu .emoticon_button img {
-    width: 2.5rem;
-    height: 2.5rem;
-    filter: var(--bright);
+  width: 2.5rem;
+  height: 2.5rem;
+  filter: var(--bright);
 }
 
 @media screen and (min-width: 0) and (max-width: 600px) {
-    .child {
-        min-width: 30rem;
-        margin-left: 3rem;
-    }
+  .child {
+    min-width: 30rem;
+    margin-left: 3rem;
+  }
 
-    .write_bar {
-        min-width: 0;
-        width: 100%;
-    }
+  .write_bar {
+    min-width: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 0) and (max-width: 650px) {
+  .write_bar {
+    bottom: 5rem;
+  }
 }
 
 @keyframes show-write-bar {
-    from {transform: translate(-50%, 100%);}
-    to {transform: translate(-50%, 0);}
+  from {
+    transform: translate(-50%, 100%);
+  }
+
+  to {
+    transform: translate(-50%, 0);
+  }
 }
 
 .write_wrap {
-    display: flex;
-    border-radius: 1rem;
-    box-shadow: var(--shadow);
+  display: flex;
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
 }
 
-.write_wrap > div:first-child {
-    flex: 1;
-    border-radius: 1rem;
-    background-color: var(--level-2-opacity);
-    backdrop-filter: blur(.3rem);
-    width: calc(100% - 19.1rem);
+.write_wrap>div:first-child {
+  flex: 1;
+  border-radius: 1rem;
+  background-color: var(--level-2-opacity);
+  backdrop-filter: blur(.3rem);
+  width: calc(100% - 19.1rem);
 }
 
 .write_wrap :global(.comment-input) {
-    background: none !important;
-    max-height: 10rem;
+  background: none !important;
+  max-height: 10rem;
 }
 
 .write_wrap button {
-    box-shadow: none;
+  box-shadow: none;
 }
