--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,18 +1,19 @@
 .quick_menu_section {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: .5rem;
+  padding: 1rem;
 }
 
 .quick_menu_list {
+  margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   row-gap: 3rem;
-  column-gap: 5rem;
+  column-gap: 3rem;
   max-width: 100rem;
   width: 100%;
 }
@@ -92,13 +93,11 @@
 
 /* 가로 메뉴 */
 @media screen and (min-height: 0px) and (max-height: 600px) {
-  .quick_menu_section {
-    padding-top: 5rem;
-  }
 
   .quick_menu_list {
-    row-gap: 2rem;
-    column-gap: 3rem;
+    margin-top: 5rem;
+    row-gap: 1.5rem;
+    column-gap: 2rem;
   }
 
   .menu {
@@ -122,32 +121,11 @@
   }
 }
 
-@media screen and (min-height: 0px) and (max-height: 400px) {
-  .quick_menu_section {
-    justify-content: end;
-    padding: 1rem;
-  }
-
-  .quick_menu_list {
-    row-gap: 1.5rem;
-    column-gap: 2rem;
-  }
-
-  .menu {
-    padding: 1rem;
-  }
-}
-
 /* 세로 메뉴 */
 @media screen and (min-width: 0px) and (max-width: 980px) {
-  .quick_menu_list {
-    column-gap: 2rem;
-  }
-}
-
-@media screen and (min-width: 0px) and (max-width: 980px) and (min-height: 600px) {
 
   .quick_menu_list {
+    margin-top: 6rem;
     grid-template-columns: 1fr;
     row-gap: 1rem;
   }
