--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,21 +120,21 @@ body.dark {
   --background: var(--level-0);
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
+:root {
+  --vh: 100%
 }
 
 html {
   /* 1rem == 10px */
   --scale: 62.5%;
   font-size: var(--scale);
-  height: 100%;
+  height: calc(var(--vh) * 100);
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
 }
 
 body {
+  height: 100%;
   background-color: var(--background);
   color: var(--text);
   font-size: 1.5rem;
@@ -152,7 +152,7 @@ body {
   grid-template-rows: auto 1fr auto;
   grid-template-columns: auto 1fr;
   width: 100%;
-  height: calc(1vh * 100);
+  height: 100%;
 }
   
 main {
