--- a/styles/meister/ranking.module.css
+++ b/styles/meister/ranking.module.css
@@ -15,7 +15,7 @@
   border-radius: 2rem;
   box-shadow: var(--shadow);
   cursor: pointer;
-  transition: .25s;
+  transition: var(--hover-transition);
 }
 
 .item:hover {
