--- a/styles/board/post/post-nav-bar.module.css
+++ b/styles/board/post/post-nav-bar.module.css
@@ -11,7 +11,7 @@
 
 .nav_wrap a {
   text-align: left;
-  transition: .25s;
+  transition: var(--hover-transition);
   border-radius: 1rem;
   padding: 1rem;
 }
