--- a/styles/board/post/post.module.css
+++ b/styles/board/post/post.module.css
@@ -7,7 +7,7 @@
   left: 100%;
   padding: 5rem .5rem 1rem;
   background-color: var(--level-1);
-  transition: .25s;
+  transition: left .25s;
 }
 
 .post.open {
@@ -81,7 +81,7 @@
 
 .like_wrap button img {
   filter: var(--bright);
-  transition: transform .25s;
+  transition: filter .25s;
 }
 
 .like_wrap button.on img {
