--- a/styles/common/check-list.module.css
+++ b/styles/common/check-list.module.css
@@ -10,7 +10,7 @@
   padding: 1rem 1.25rem;
   border-radius: 1.5rem;
   background-color: var(--level-3);
-  transition: .25s;
+  transition: var(--hover-transition);
   box-shadow: var(--shadow);
 }
 
