--- a/styles/common/dropdown-menu.module.css
+++ b/styles/common/dropdown-menu.module.css
@@ -44,7 +44,7 @@
   border-radius: .5rem;
   box-shadow: var(--shadow);
   background-color: var(--level-2);
-  transition: all .25s;
+  transition: transform .25s, opacity .25s;
 }
 
 .dropdown_menu:hover .dropdown_content {
@@ -59,7 +59,7 @@
   padding: 1rem 1.4rem;
   width: 100%;
   cursor: pointer;
-  transition: .25s;
+  transition: var(--hover-transition);
   border-radius: .5rem;
 }
 
