--- a/styles/common/modal.css
+++ b/styles/common/modal.css
@@ -66,7 +66,7 @@
 .modal--menu li {
   padding: 1rem;
   flex: 1;
-  transition: .25s;
+  transition: var(--hover-transition);
   cursor: pointer;
 }
 
