--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,7 +65,8 @@ body {
   --shadow: .1rem .1rem .5rem rgba(0, 0, 0, .15);
   --shadow-level-1: .2rem .2rem 5rem rgba(0, 0, 0, .2);
   --drop-shadow: drop-shadow(rgba(90, 90, 90, 0.1) 0px 2px 5px);
-  --hover: rgba(0, 0, 0, .2);;
+  --hover: rgba(0, 0, 0, .2);
+  --hover-transition: background .25s;
   --bright: brightness(0);
   --visited: #800080;
 
@@ -345,41 +346,6 @@ label, summary{
   margin-left: 0;
 }
 
-.left-slide-menu {
-  position: relative;
-  align-self: stretch;
-  display: flex;
-  align-items: center;
-}
-
-.left-slide-menu .menu-button {
-  position: relative;
-}
-
-.left-slide-menu .menu-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  pointer-events: none;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translateX(100%);
-  height: 100%;
-  word-break: keep-all;
-  padding: 1rem;
-  transition: .25s;
-  background-color: var(--level-2-opacity);
-}
-
-.left-slide-menu .menu-button:hover ~ .menu-list,
-.menu-list:hover {
-  pointer-events: all;
-  opacity: 1;
-  transform: translateX(0);
-}
-
 .menu-button {
   padding: 1rem;
   display: flex;
@@ -387,7 +353,7 @@ label, summary{
   justify-content: center;
   cursor: pointer;
   border-radius: 1rem;
-  transition: all .25s;
+  transition: var(--hover-transition);
 }
 
 .menu-button:hover {
@@ -403,7 +369,7 @@ label, summary{
   display: block;
   margin: .2rem 0;
   filter: var(--bright);
-  transition: .4s ease-in-out;
+  transition: transform .4s ease-in-out;
 }
 
 .go-back .line:not(:nth-child(2)) {
@@ -472,11 +438,6 @@ label, summary{
   display: inline-flex;
   align-items: center;
   gap: .5rem;
-  transition: .25s;
-}
-
-.checkbox:active {
-  transform: scale(.8);
 }
 
 .accent {
@@ -505,7 +466,6 @@ label, summary{
   background-position: center;
   border: none;
   filter: var(--bright);
-  transition: .25s;
 }
 
 :is(
