--- a/styles/globals.css
+++ b/styles/globals.css
@@ -388,6 +388,17 @@ label, summary{
   transform: translateY(-.295rem) rotate(25deg);
 }
 
+.dim {
+  pointer-events: all;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dim);
+  z-index: 100;
+}
+
 .loading {
   display: flex;
   flex-direction: column;
