ADD: 홈 배경 커스텀 이미지 설정 기능

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -465,6 +465,7 @@ label, summary{
   background-size: 4rem;
   background-position: center;
   border: none;
+  transition: var(--hover-transition);
   filter: var(--bright);
 }
 
