--- a/styles/board/comment.module.css
+++ b/styles/board/comment.module.css
@@ -1,6 +1,6 @@
 .comment_wrap {
   margin: 2rem 0 5rem;
-  padding: 30px 5px;
+  padding: 3rem .5rem 7rem;
   background-color: var(--level-2);
   border-radius: 1rem;
   box-shadow: var(--shadow);
