--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,17 +123,19 @@ body.dark {
   --background: var(--level-0);
 }
 
-:root {
-  --vh: 1vh;
-}
-
 html {
   /* 1rem == 10px */
   --scale: 62.5%;
   font-size: var(--scale);
-  height: calc(var(--vh) * 100);
+  height: 100vh;
   scroll-behavior: smooth;
   scroll-snap-type: y proximity;
+}
+
+@supports (height: 100svh) {
+  html {
+    height: 100svh;
+  }
 }
 
 body {
